code cleanup and updated details to readme

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../assets/bckgrnd.png");
+    background-image: url("../images/bckgrnd.png");
     background-size: cover;
     background-repeat: repeat;
     padding-top: 100px;
